<?xml version="1.0"?>
<package>
    <name>roboclaw_driver</name>
    <version>0.0.1</version>
    <description>The roboclaw_driver package</description>

    <maintainer email="luk.mitka@gmail.com">Łukasz Mitka</maintainer>

    <license>GPL</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>serial</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>serial</run_depend>
</package>